# ADV-Explorer

./: .gitignore  .readthedocs.yaml  CLAUDE.md  CMakeLists.txt  README.md  instructions.md
.github/workflows/: build.yml
docs/: conf.py  developer.rst  index.rst  installation.rst  usage.rst  windows-signature-approach.md
input-data/: z050.adv  z059.adv  z068.adv  z077.adv  z086.adv  z095.adv  z104.adv  z113.adv  z122.adv  z131.adv  z140.adv  z149.adv  z158.adv  z167.adv  z176.adv  z185.adv  z194.adv
packaging/: adv-explorer.desktop
src/: app.rc  main.cpp  resources.qrc
src/core/: AdvData.cpp  AdvData.h  CsvReader.cpp  CsvReader.h  Despike.cpp  Despike.h  FlowStats.cpp  FlowStats.h  MeasurementPoint.cpp  MeasurementPoint.h  ProfileStatsExport.cpp  ProfileStatsExport.h  Project.cpp  Project.h  ProjectModel.cpp  ProjectModel.h  Rotation.cpp  Rotation.h  VnaReader.cpp  VnaReader.h
src/gui/: AboutDialog.cpp  AboutDialog.h  FlumeView.cpp  FlumeView.h  ImportWizard.cpp  ImportWizard.h  MainWindow.cpp  MainWindow.h  PlotFrame.cpp  PlotFrame.h  PlotOptionsDialog.cpp  PlotOptionsDialog.h  PointWizard.cpp  PointWizard.h  ProfileFrame.cpp  ProfileFrame.h  SeriesStyleDialog.cpp  SeriesStyleDialog.h
templates/: ADV-profiles.xlsx
tests/: CMakeLists.txt  tst_core.cpp
tools/: make_template.py
